docs: Update README with build fix and extensibility information