@@ -2,6 +2,32 @@
 
 A production-ready **Model Context Protocol (MCP) server** built with **Spring Boot 4** and **Java 21** for seamless integration with Enterprise Content Management (ECM) REST APIs. This server enables AI assistants and MCP clients to manage documents, search content, organize folders, handle metadata, control versions, and manage workflows within enterprise content management systems.
 
+> 🚀 **Ready to build your own MCP server?** This repository is designed to be **extensible and reusable** for JPMorgan Chase and other enterprises. See [docs/COPILOT_GUIDE.md](docs/COPILOT_GUIDE.md) for detailed instructions.
+
+## 📚 Documentation
+
+- **[Quick Start Guide](QUICKSTART.md)** - Get up and running in minutes
+- **[Architecture Documentation](docs/ARCHITECTURE.md)** - System design and patterns
+- **[Copilot Guide](docs/COPILOT_GUIDE.md)** - Comprehensive guide for extending the server
+
+## ⚡ Quick Start
+
+```bash
+# 1. Pull latest changes
+git pull origin main
+
+# 2. Build the project (Java 21 required)
+mvn clean install
+
+# 3. Run the server
+java -jar target/ecm-mcp-server-1.0.0.jar
+
+# 4. Test the server
+curl http://localhost:8080/actuator/health
+```
+
+**Note**: The recent compilation error with `--enable-preview` has been fixed. If you encounter build issues, pull the latest changes from main branch.
+
 ## 🚀 Features
 
 ### Document Management
@@ -47,65 +73,76 @@ A production-ready **Model Context Protocol (MCP) server** built with **Spring B
 
 ### Technology Stack
 - **Spring Boot 4.0.0** - Latest Spring Boot framework
-- **Java 21** - Modern Java with virtual threads and pattern matching
+- **Java 21** - Modern Java with latest features
 - **Spring WebFlux** - Reactive programming for non-blocking I/O
 - **Resilience4j** - Circuit breaker, retry, and rate limiting
 - **Micrometer** - Observability with Prometheus integration
 - **Lombok** - Reduce boilerplate code
 
+### Extensible Design
+
+This server is built with extensibility in mind:
+
+✅ **Easy to add new MCP tools** - Simple annotation-based registration
+✅ **Pluggable ECM backends** - Support multiple ECM systems (FileNet, SharePoint, Documentum)
+✅ **Configuration-driven** - Environment-specific settings
+✅ **Enterprise-ready** - Built-in resilience, monitoring, and security
+✅ **Well-documented** - Comprehensive guides for extending functionality
+
+See [Architecture Documentation](docs/ARCHITECTURE.md) for details.
+
 ### Project Structure
 
 ```
 ecm-mcp-server-springboot/
+├── docs/
+│   ├── ARCHITECTURE.md           # System design and patterns
+│   └── COPILOT_GUIDE.md          # Comprehensive extension guide
 ├── src/main/java/com/jpmc/ecm/
 │   ├── EcmMcpServerApplication.java    # Main application class
-│   ├── client/
-│   │   └── EcmApiClient.java            # ECM REST API client
-│   ├── config/
-│   │   ├── EcmApiProperties.java        # ECM API configuration
-│   │   ├── WebClientConfig.java         # WebClient setup
-│   │   └── McpProtocolConfig.java       # MCP protocol config
-│   ├── controller/
-│   │   ├── McpController.java           # MCP HTTP endpoints
-│   │   └── HealthController.java        # Health check endpoint
-│   ├── dto/                             # Data Transfer Objects
-│   │   ├── DocumentDto.java
-│   │   ├── FolderDto.java
-│   │   ├── SearchRequestDto.java
-│   │   ├── SearchResultDto.java
-│   │   ├── VersionDto.java
-│   │   └── WorkflowDto.java
-│   ├── exception/                       # Exception handling
-│   │   ├── EcmApiException.java
-│   │   └── GlobalExceptionHandler.java
+│   ├── client/                         # ECM backend clients
+│   │   ├── EcmClient.java              # Common interface
+│   │   ├── FileNetClient.java          # FileNet implementation
+│   │   └── SharePointClient.java       # SharePoint implementation
+│   ├── config/                         # Configuration classes
+│   │   ├── EcmProperties.java          # ECM configuration
+│   │   ├── WebClientConfig.java        # HTTP client setup
+│   │   └── ResilienceConfig.java       # Resilience patterns
+│   ├── controller/                     # REST controllers
+│   │   └── McpController.java          # MCP HTTP endpoints
+│   ├── service/                        # Business services
+│   │   ├── DocumentService.java        # Document operations
+│   │   ├── SearchService.java          # Search operations
+│   │   ├── WorkflowService.java        # Workflow operations
+│   │   └── SecurityService.java        # Security operations
+│   ├── dto/                            # Data Transfer Objects
+│   ├── exception/                      # Exception handling
 │   └── mcp/                            # MCP Protocol layer
-│       ├── McpProtocolHandler.java      # Main protocol handler
-│       ├── model/                       # MCP models
+│       ├── model/                      # MCP models
 │       │   ├── McpRequest.java
 │       │   ├── McpResponse.java
-│       │   ├── McpError.java
-│       │   └── ToolInfo.java
-│       └── tools/                       # MCP Tool implementations
-│           ├── DocumentTools.java
-│           ├── SearchTools.java
-│           ├── FolderTools.java
-│           ├── MetadataTools.java
-│           ├── VersionTools.java
-│           └── WorkflowTools.java
+│       │   ├── McpTool.java
+│       │   └── McpToolParameter.java
+│       ├── service/                    # MCP services
+│       │   ├── McpToolRegistry.java    # Tool registration
+│       │   └── McpToolExecutor.java    # Tool execution
+│       └── handler/                    # Protocol handlers
+│           └── McpProtocolHandler.java
 ├── src/main/resources/
-│   ├── application.yml                  # Main configuration
-│   ├── application-dev.yml              # Development profile
-│   └── application-prod.yml             # Production profile
-└── pom.xml                              # Maven dependencies
+│   ├── application.yml                 # Main configuration
+│   ├── application-dev.yml             # Development profile
+│   └── application-prod.yml            # Production profile
+├── QUICKSTART.md                       # Quick start guide
+└── pom.xml                             # Maven dependencies
 ```
 
 ## 📦 Installation
 
 ### Prerequisites
-- **Java 21** or higher
-- **Maven 3.9+**
+- **Java 21** or higher ([Download](https://adoptium.net/temurin/releases/?version=21))
+- **Maven 3.8+** ([Download](https://maven.apache.org/download.cgi))
 - Access to ECM REST API
-- API credentials (username/password or API key)
+- API credentials
 
 ### Build from Source
 
@@ -114,33 +151,53 @@ ecm-mcp-server-springboot/
 git clone https://github.com/vspaswin/ecm-mcp-server-springboot.git
 cd ecm-mcp-server-springboot
 
+# Verify Java version
+java -version  # Should show Java 21
+
 # Build with Maven
-mvn clean package
+mvn clean install
 
 # Run the application
 java -jar target/ecm-mcp-server-1.0.0.jar
 ```
 
-### Configuration
+**Troubleshooting Build Issues**:
 
-Create `application-local.yml` or set environment variables:
-
-```yaml
-ecm:
-  api:
-    base-url: https://your-ecm-api.com/api/v1
-    username: your_username
-    password: your_password
-    # OR use API key:
-    # api-key: your_api_key
+If you see `"invalid source release 21 with --enable-preview"` error:
+```bash
+git pull origin main  # Get the fixed pom.xml
+mvn clean
+mvn install
 ```
 
-Or use environment variables:
+See [QUICKSTART.md](QUICKSTART.md) for detailed build instructions and troubleshooting.
+
+### Configuration
+
+Create `.env` file from example:
 
 ```bash
-export ECM_API_URL=https://your-ecm-api.com/api/v1
-export ECM_USERNAME=your_username
-export ECM_PASSWORD=your_password
+cp .env.example .env
+```
+
+Edit `.env` with your settings:
+
+```bash
+# FileNet Configuration
+FILENET_BASE_URL=http://your-filenet-server:9080/fncmis
+FILENET_USERNAME=admin
+FILENET_PASSWORD=your-password
+
+# Server Configuration
+SERVER_PORT=8080
+```
+
+Or use environment variables directly:
+
+```bash
+export FILENET_BASE_URL=https://your-filenet-server:9080/fncmis
+export FILENET_USERNAME=your_username
+export FILENET_PASSWORD=your_password
 ```
 
 ## 🚀 Usage
@@ -149,39 +206,61 @@ export ECM_PASSWORD=your_password
 
 **Development mode:**
 ```bash
-mvn spring-boot:run -Dspring-boot.run.profiles=dev
+mvn spring-boot:run
 ```
 
 **Production mode:**
 ```bash
-java -jar target/ecm-mcp-server-1.0.0.jar --spring.profiles.active=prod
+java -jar target/ecm-mcp-server-1.0.0.jar
 ```
 
 **With custom configuration:**
 ```bash
 java -jar target/ecm-mcp-server-1.0.0.jar \
-  --ecm.api.base-url=https://ecm-api.example.com \
-  --ecm.api.username=myuser \
-  --ecm.api.password=mypass
+  --ecm.filenet.base-url=https://filenet.example.com \
+  --ecm.filenet.username=myuser \
+  --ecm.filenet.password=mypass
 ```
 
 ### Integration with Claude Desktop
 
-Add to `claude_desktop_config.json`:
+**macOS**: Edit `~/Library/Application Support/Claude/claude_desktop_config.json`
+
+**Windows**: Edit `%APPDATA%\Claude\claude_desktop_config.json`
 
 ```json
 {
   "mcpServers": {
-    "ecm": {
+    "ecm-mcp-server": {
       "command": "java",
       "args": [
         "-jar",
-        "/path/to/ecm-mcp-server-1.0.0.jar"
+        "/absolute/path/to/ecm-mcp-server-springboot/target/ecm-mcp-server-1.0.0.jar"
       ],
       "env": {
-        "ECM_API_URL": "https://your-ecm-api.com/api/v1",
-        "ECM_USERNAME": "your_username",
-        "ECM_PASSWORD": "your_password"
+        "FILENET_BASE_URL": "http://your-filenet-server:9080/fncmis",
+        "FILENET_USERNAME": "admin",
+        "FILENET_PASSWORD": "password"
+      }
+    }
+  }
+}
+```
+
+Restart Claude Desktop and look for the hammer icon (🔨) to see available tools.
+
+### Integration with VSCode Copilot
+
+Create `.mcp.json` in your workspace or `%USERPROFILE%` (Windows) / `~/` (macOS/Linux):
+
+```json
+{
+  "servers": {
+    "ecm-mcp-server": {
+      "command": "java",
+      "args": ["-jar", "/absolute/path/to/target/ecm-mcp-server-1.0.0.jar"],
+      "env": {
+        "FILENET_BASE_URL": "http://your-filenet-server:9080/fncmis"
       }
     }
   }
@@ -191,33 +270,36 @@ Add to `claude_desktop_config.json`:
 ### Available MCP Tools
 
 #### Documents
-- `ecm_get_document` - Get document information
-- `ecm_delete_document` - Delete a document
+- `ecm_get_document` - Get document information by ID
+- `ecm_create_document` - Create new document
+- `ecm_update_document` - Update document
+- `ecm_delete_document` - Delete document
 
 #### Search
-- `ecm_search_documents` - Simple text search
-- `ecm_advanced_search` - Search with filters
-
-#### Folders
-- `ecm_create_folder` - Create new folder
-- `ecm_list_folder_contents` - List folder contents
+- `ecm_search_documents` - Search documents with query
 
 #### Metadata
 - `ecm_get_metadata` - Get document metadata
 - `ecm_update_metadata` - Update metadata fields
 
-#### Versions
-- `ecm_get_versions` - Get version history
+#### Workflows (Extensible)
+- `workflow_start` - Start workflow instance
+- `workflow_get_status` - Get workflow status
 
-#### Workflows
-- `ecm_start_workflow` - Start workflow on document
-- `ecm_get_workflow_status` - Get workflow status
+#### Security (Extensible)
+- `security_check_permission` - Check user permissions
+- `security_grant_permission` - Grant permissions
 
-### API Endpoints
+### Testing the Server
 
-**MCP Protocol (HTTP):**
+**Health Check:**
 ```bash
-curl -X POST http://localhost:8080/mcp/message \
+curl http://localhost:8080/actuator/health
+```
+
+**List MCP Tools:**
+```bash
+curl -X POST http://localhost:8080/mcp \
   -H "Content-Type: application/json" \
   -d '{
     "jsonrpc": "2.0",
@@ -227,68 +309,114 @@ curl -X POST http://localhost:8080/mcp/message \
   }'
 ```
 
-**Health Check:**
+**Call a Tool:**
 ```bash
-curl http://localhost:8080/health
+curl -X POST http://localhost:8080/mcp \
+  -H "Content-Type: application/json" \
+  -d '{
+    "jsonrpc": "2.0",
+    "id": "2",
+    "method": "tools/call",
+    "params": {
+      "name": "ecm_get_document",
+      "arguments": {"documentId": "DOC-123"}
+    }
+  }'
 ```
 
-**Actuator Endpoints:**
-```bash
-curl http://localhost:8080/actuator/health
-curl http://localhost:8080/actuator/metrics
-curl http://localhost:8080/actuator/prometheus
+## 🔧 Extending the Server
+
+### Adding New MCP Tools
+
+1. Create a service class
+2. Use `@PostConstruct` to register tools
+3. Define tool schema with parameters
+4. Implement executor logic
+
+**Example:**
+
+```java
+@Service
+@RequiredArgsConstructor
+public class CustomService {
+    private final McpToolRegistry registry;
+    
+    @PostConstruct
+    public void registerTools() {
+        McpTool tool = McpTool.builder()
+            .name("custom_tool")
+            .description("My custom tool")
+            .inputSchema(Map.of(
+                "param1", McpToolParameter.builder()
+                    .type("string")
+                    .description("Parameter description")
+                    .required(true)
+                    .build()
+            ))
+            .build();
+            
+        registry.registerTool(tool, params -> {
+            // Your logic here
+            return result;
+        });
+    }
+}
 ```
 
-## 🔧 Configuration
+See [docs/COPILOT_GUIDE.md](docs/COPILOT_GUIDE.md) for comprehensive examples and patterns.
 
-### Key Configuration Properties
+### Adding New ECM Backends
 
-| Property | Description | Default | Required |
-|----------|-------------|---------|----------|
-| `ecm.api.base-url` | ECM API base URL | - | Yes |
-| `ecm.api.username` | Basic auth username | - | Yes* |
-| `ecm.api.password` | Basic auth password | - | Yes* |
-| `ecm.api.api-key` | API key auth | - | Yes* |
-| `ecm.api.timeout.connect` | Connection timeout | 10s | No |
-| `ecm.api.timeout.read` | Read timeout | 30s | No |
-| `ecm.api.max-retries` | Max retry attempts | 3 | No |
-| `server.port` | Server port | 8080 | No |
+1. Implement `EcmClient` interface
+2. Add configuration properties
+3. Configure WebClient
+4. Add authentication logic
 
-*Either username/password OR api-key is required
+**Example:**
 
-### Resilience Configuration
+```java
+@Component
+public class DocumentumClient implements EcmClient {
+    @Override
+    public Mono<Map<String, Object>> getDocument(String id) {
+        // Implement Documentum-specific logic
+        return webClient.get()
+            .uri(baseUrl + "/documents/{id}", id)
+            .retrieve()
+            .bodyToMono(Map.class);
+    }
+}
+```
 
-**Circuit Breaker:**
-- Failure threshold: 50%
-- Sliding window: 10 calls
-- Wait duration: 10 seconds
-
-**Retry:**
-- Max attempts: 3
-- Wait duration: 1 second
-- Exponential backoff: 2x multiplier
+See [docs/ARCHITECTURE.md](docs/ARCHITECTURE.md) for detailed architecture patterns.
 
 ## 📊 Monitoring
 
+### Actuator Endpoints
+
+- **Health**: `http://localhost:8080/actuator/health`
+- **Metrics**: `http://localhost:8080/actuator/metrics`
+- **Prometheus**: `http://localhost:8080/actuator/prometheus`
+- **Info**: `http://localhost:8080/actuator/info`
+
 ### Prometheus Metrics
 
-Metrics are exposed at `/actuator/prometheus`:
-
+Metrics include:
 - HTTP request metrics
 - ECM API call metrics
-- Circuit breaker stats
+- Circuit breaker statistics
 - Retry statistics
 - JVM metrics (heap, threads, GC)
+- Custom MCP tool metrics
 
 ### Health Checks
 
-Comprehensive health checks at `/actuator/health`:
-
+Comprehensive health checks:
 - Application status
 - ECM API connectivity
 - Circuit breaker status
 - Disk space
-- Database (if applicable)
+- Custom health indicators
 
 ## 🧪 Testing
 
@@ -297,32 +425,42 @@ Comprehensive health checks at `/actuator/health`:
 mvn test
 ```
 
-**Run with coverage:**
+**Run specific test:**
 ```bash
-mvn test jacoco:report
+mvn test -Dtest=DocumentServiceTest
 ```
 
-**Integration tests:**
+**Run integration tests:**
 ```bash
 mvn verify
+```
+
+**Skip tests (faster builds):**
+```bash
+mvn clean install -DskipTests
 ```
 
 ## 🐳 Docker Deployment
 
 **Build Docker image:**
 ```bash
-docker build -t ecm-mcp-server:latest .
+docker build -t ecm-mcp-server:1.0.0 .
 ```
 
 **Run container:**
 ```bash
 docker run -d \
   -p 8080:8080 \
-  -e ECM_API_URL=https://ecm-api.example.com \
-  -e ECM_USERNAME=myuser \
-  -e ECM_PASSWORD=mypass \
+  -e FILENET_BASE_URL=https://filenet.example.com:9080/fncmis \
+  -e FILENET_USERNAME=admin \
+  -e FILENET_PASSWORD=password \
   --name ecm-mcp-server \
-  ecm-mcp-server:latest
+  ecm-mcp-server:1.0.0
+```
+
+**Using Docker Compose:**
+```bash
+docker-compose up -d
 ```
 
 ## 🔐 Security
@@ -330,24 +468,24 @@ docker run -d \
 ### Best Practices
 
 1. **Secure Credentials**
-   - Use environment variables for sensitive data
-   - Never commit credentials to version control
-   - Consider using HashiCorp Vault or AWS Secrets Manager
+   - Use environment variables
+   - Never commit credentials
+   - Use secrets management (Vault, AWS Secrets Manager)
 
 2. **HTTPS Only**
-   - Always use HTTPS for ECM API connections
+   - Always use HTTPS for ECM APIs
    - Validate SSL certificates
-   - Use TLS 1.2 or higher
+   - TLS 1.2 or higher
 
 3. **Authentication**
-   - Prefer API key authentication over basic auth
+   - Prefer API key over basic auth
    - Rotate credentials regularly
    - Implement rate limiting
 
 4. **Network Security**
-   - Run behind firewall or VPN
+   - Run behind firewall/VPN
    - Limit access to trusted networks
-   - Use Spring Security for HTTP endpoints
+   - Use Spring Security for endpoints
 
 ## 🤝 Contributing
 
@@ -355,9 +493,12 @@ Contributions are welcome! Please:
 
 1. Fork the repository
 2. Create a feature branch (`git checkout -b feature/amazing-feature`)
-3. Commit your changes (`git commit -m 'Add amazing feature'`)
-4. Push to the branch (`git push origin feature/amazing-feature`)
-5. Open a Pull Request
+3. Make your changes
+4. Write tests
+5. Build and test (`mvn clean verify`)
+6. Commit your changes (`git commit -m 'Add amazing feature'`)
+7. Push to the branch (`git push origin feature/amazing-feature`)
+8. Open a Pull Request
 
 ## 📝 License
 
@@ -369,26 +510,31 @@ This project is licensed under the MIT License - see the [LICENSE](LICENSE) file
 - [Model Context Protocol](https://modelcontextprotocol.io/) - MCP specification
 - [Resilience4j](https://resilience4j.readme.io/) - Resilience patterns
 - [Project Reactor](https://projectreactor.io/) - Reactive programming
+- [Micrometer](https://micrometer.io/) - Metrics and observability
 
 ## 📞 Support
 
 - **Issues**: [GitHub Issues](https://github.com/vspaswin/ecm-mcp-server-springboot/issues)
-- **Discussions**: [GitHub Discussions](https://github.com/vspaswin/ecm-mcp-server-springboot/discussions)
-- **Email**: support@example.com
+- **Documentation**: [docs/](docs/)
+- **Quick Start**: [QUICKSTART.md](QUICKSTART.md)
+- **Architecture**: [docs/ARCHITECTURE.md](docs/ARCHITECTURE.md)
+- **Extension Guide**: [docs/COPILOT_GUIDE.md](docs/COPILOT_GUIDE.md)
 
 ## 🗺️ Roadmap
 
+- [x] Spring Boot 4 & Java 21 support
+- [x] Reactive WebFlux architecture
+- [x] Resilience patterns (circuit breaker, retry)
+- [x] Comprehensive documentation
+- [x] Extensible tool registration
 - [ ] OAuth 2.0 authentication support
 - [ ] Bulk document operations
 - [ ] Advanced permission management
-- [ ] Document template support
-- [ ] Audit log retrieval
 - [ ] WebSocket transport for MCP
 - [ ] GraphQL API support
 - [ ] Multi-tenancy support
 - [ ] AI-powered document classification
-- [ ] Advanced workflow automation
 
 ---
 
-**Built with ❤️ using Spring Boot 4 and Java 21**
+**Built with ❤️ using Spring Boot 4 and Java 21 for JPMorgan Chase and Enterprise Applications**
